clusters/misaki/synapse/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-synapse
  namespace: matrix
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`im.ebadfd.tech)
      kind: Rule
      services:
        - name: synapse-matrix-synapse
          kind: Service
          port: 8008
  tls:
    secretName: im-ebadfd-tech-tls
